# native-speech

./: README.md  pyproject.toml
native_speech/: __init__.py  base_speaker.py  ns_speech.py  speech_dispatcher.py  tolk.py
