[tool.poetry]
name = "native-speech"
version = "0.1.0"
description = ""
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "native_speech"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
