[tool.poetry]
name = "native-speech"
version = "0.1.0"
description = "A cross-platform text-to-speech library that uses the system's native TTS facility"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "native_speech"}]

[tool.poetry.dependencies]
python = "^3.10"
cytolk = {version = "^0.1.12", platform = "win32"}
pyobjc-framework-cocoa = {version = "^9.0.1", platform = "darwin"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
